# evolved-dragonfable-launcher

./: .gitignore  Cargo.toml  README.md  build.sh  run.sh
core/: Cargo.toml
core/src/: character.rs  config.rs  encryption.rs  files.rs  main.rs
core/src/server/: get.rs  mod.rs  post.rs  stream.rs  utils.rs
src/: files.rs  flash_player.rs  main.rs
src/server/: get.rs  mod.rs  post.rs  stream.rs  utils.rs
ui/: index.html  main.js  package.json  warning.html
